Correction version mobile page Restaurants apres soutenance

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   body {
     margin: 0;
     padding: 0;
+    width: auto;
   }
   @media screen and (max-width: 250px) {
     body {
@@ -343,7 +344,7 @@
     z-index: 1;
     min-width: 290px;
     max-width: 699px;
-    height: 100px;
+    height: 70px;
     margin-left: -15px;
     margin-right: 20px;
     display: flex;
@@ -458,7 +459,7 @@
     .background img {
       overflow: hidden;
       height: 300px;
-      width: 400px;
+      width: 699px;
     }
   }
   
@@ -518,11 +519,48 @@
     animation: 1s ease-in 1.5s both translationy;
     animation-delay: 1400ms;
   }
-  @media screen and (min-width: 699px) {
+  @media screen and (min-width: 319px) {
     .restaurant .type_plats__liste {
       display: flex;
       flex-direction: column;
-      width: 600px;
+      width:300px;
+    }
+  }
+  @media screen and (max-width: 699px) {
+    .restaurant .type_plats__liste {
+      display: flex;
+      flex-direction: column;
+      width: 680px;
+      margin-right: 45px;
+      margin-left: -27px;
+    }
+  }
+  @media screen and (max-width: 599px) {
+    .restaurant .type_plats__liste {
+      display: flex;
+      flex-direction: column;
+      width: 580px;
+      margin-right: 2px;
+      margin-left: -23px;
+    }
+  }
+  @media screen and (max-width: 499px) {
+    .restaurant .type_plats__liste {
+      width: 550px; 
+    }
+  }
+  @media screen and (max-width: 449px) {
+    .restaurant .type_plats__liste {
+      width: 460px; 
+      margin-left: -8px;
+      margin-right: 27px;
+    }
+  }
+  @media screen and (max-width: 400px) {
+    .restaurant .type_plats__liste {
+      width: 450px; 
+      margin-left: 2px;
+      margin-right: 7px;
     }
   }
   .restaurant .type_plats .plats {
@@ -531,23 +569,53 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
-    min-width: 360px;
-    max-width: 450px;
+    width: 80%;
+    height: 70px;
+    padding-top: 10px;
     max-height: 100px;
-    background-color: white;
+    background-color:white;
     margin: 20px 0 20px 0;
     border-radius: 20px;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (min-width: 319px) {
     .restaurant .type_plats .plats {
-      min-width: 230px;
-      max-height: 150px;
+      min-width: 200px;
+      max-width: 290px;
+      margin-right: 105px;
+      margin-left: -60px;
     }
-  }
+  } 
+  @media screen and (min-width: 375px) {
+    .restaurant .type_plats .plats {
+      min-width: 250px;
+      max-width: 340px;
+      margin-right: 55px;
+      margin-left: -65px;
+    }
+  }   
+  @media screen and (min-width: 400px) {
+    .restaurant .type_plats .plats {
+      min-width: 350px;
+      max-width: 400px;
+      margin-right: 60px;
+      margin-left: -28px;
+    }
+  }  
+  @media screen and (min-width: 499px) {
+    .restaurant .type_plats .plats {
+      min-width: 400px;
+      max-width: 460px;
+    }
+  }  
+  @media screen and (min-width: 599px) {
+    .restaurant .type_plats .plats {
+      min-width: 450px;
+      max-width: 590px;
+    }
+  }  
   @media screen and (min-width: 699px) {
     .restaurant .type_plats .plats {
-      min-width: 600px;
+      min-width: 500px;
     }
   }  
   @media screen and (min-width: 1024px) {
@@ -561,18 +629,19 @@
     justify-content: space-between;
     width: 90%;
     border: 3px;
-    padding-left: 15px;
+    padding-left: 10px;
   }
   .restaurant .type_plats .plats__titres {
     margin: 0;
     font-weight: bold;
-    font-size: 120%;
+    font-size: 110%;
   }
   .restaurant .type_plats .plats__texte {
     margin-top: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    font-size: 85%;
   }
   .restaurant .type_plats .plats__prix {
     padding: 0 5px 0 5px;
@@ -606,7 +675,7 @@
     text-overflow: ellipsis;
     transition: 1s ease-in-out;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 320px) {
     .restaurant .type_plats .plats p {
       overflow: visible;
       white-space: normal;
